--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
-    "bootstrap-icons": "^1.11.3"
+    "bootstrap-icons": "^1.11.3",
+    "nodemon": "^3.1.4"
   }
 }
