--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bootstrap-icons": "^1.11.3",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "sweetalert": "^2.1.2"
   }
 }
